--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!doctype html>
 
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>Test</title>
+  <meta name="description" content="Test">
+  <meta name="author" content="SitePoint">
+
+
+</head>
+
+<body>
+<h1>Test</h1>
+</body>
+</html>
